problems through temp normalization

--- a/prereqs.ipynb
+++ b/prereqs.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "import numpy as np\n",
     "from einops import rearrange, repeat, reduce\n",
     "import torch as t"
    ]
@@ -113,19 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [52], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m temps \u001b[38;5;241m=\u001b[39m t\u001b[38;5;241m.\u001b[39mTensor([\u001b[38;5;241m71\u001b[39m, \u001b[38;5;241m72\u001b[39m, \u001b[38;5;241m70\u001b[39m, \u001b[38;5;241m75\u001b[39m, \u001b[38;5;241m71\u001b[39m, \u001b[38;5;241m72\u001b[39m, \u001b[38;5;241m70\u001b[39m, \u001b[38;5;241m68\u001b[39m, \u001b[38;5;241m65\u001b[39m, \u001b[38;5;241m60\u001b[39m, \u001b[38;5;241m68\u001b[39m, \u001b[38;5;241m60\u001b[39m, \u001b[38;5;241m55\u001b[39m, \u001b[38;5;241m59\u001b[39m, \u001b[38;5;241m75\u001b[39m, \u001b[38;5;241m80\u001b[39m, \u001b[38;5;241m85\u001b[39m, \u001b[38;5;241m80\u001b[39m, \u001b[38;5;241m78\u001b[39m, \u001b[38;5;241m72\u001b[39m, \u001b[38;5;241m83\u001b[39m])\n\u001b[1;32m     13\u001b[0m expected \u001b[38;5;241m=\u001b[39m t\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m71.5714\u001b[39m, \u001b[38;5;241m62.1429\u001b[39m, \u001b[38;5;241m79.0\u001b[39m])\n\u001b[0;32m---> 14\u001b[0m \u001b[43massert_all_close\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemperatures_average\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemps\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexpected\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [11], line 2\u001b[0m, in \u001b[0;36massert_all_close\u001b[0;34m(actual, expected, rtol, atol)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21massert_all_close\u001b[39m(actual: t\u001b[38;5;241m.\u001b[39mTensor, expected: t\u001b[38;5;241m.\u001b[39mTensor, rtol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-05\u001b[39m, atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0001\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[43mactual\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m \u001b[38;5;241m==\u001b[39m expected\u001b[38;5;241m.\u001b[39mshape, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape mismatch, got: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mactual\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m t\u001b[38;5;241m.\u001b[39mallclose(actual, expected, rtol\u001b[38;5;241m=\u001b[39mrtol, atol\u001b[38;5;241m=\u001b[39matol)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPassed!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n"
      ]
     }
    ],
@@ -139,7 +135,7 @@
     "    You can do this with a single call to reduce.\n",
     "    \"\"\"\n",
     "    assert len(temps) % 7 == 0\n",
-    "    pass\n",
+    "    return reduce(temps, '(w1 w2) -> w1', 'mean', w2=7)\n",
     "\n",
     "temps = t.Tensor([71, 72, 70, 75, 71, 72, 70, 68, 65, 60, 68, 60, 55, 59, 75, 80, 85, 80, 78, 72, 83])\n",
     "expected = t.tensor([71.5714, 62.1429, 79.0])\n",
@@ -148,9 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def temperatures_differences(temps: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"For each day, subtract the average for the week the day belongs to.\n",
@@ -158,15 +162,24 @@
     "    temps: as above\n",
     "    \"\"\"\n",
     "    assert len(temps) % 7 == 0\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
+    "    ['collapse comment'\n",
+    "        # print(temps)\n",
+    "        # print(avg)\n",
+    "        # avg2 = reduce(temps, '(w1 w2) -> w1 ()', 'mean', w2=7)\n",
+    "        # print(avg2)\n",
+    "        # print(avg_repeated)\n",
+    "        # print(temps - avg_repeated)\n",
+    "        # temps_rearranged = rearrange(temps, '(w1 w2) -> w1 w2', w2 = 7)\n",
+    "        # print(temps_rearranged)\n",
+    "        # rearrange(temps_rearranged - avg2, 'h w -> (h w)')\n",
+    "     ]\n",
+    "\n",
+    "    avg = temperatures_average(temps)\n",
+    "    avg_repeated = repeat(avg, 'h -> (h 7)')\n",
+    "\n",
+    "    return temps - avg_repeated \n",
+    "    \n",
     "expected = t.tensor(\n",
     "    [\n",
     "        -0.5714,\n",
@@ -199,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def temperatures_normalized(temps: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"For each day, subtract the weekly average and divide by the weekly standard deviation.\n",
@@ -210,15 +231,20 @@
     "\n",
     "    Pass torch.std to reduce.\n",
     "    \"\"\"\n",
-    "    pass\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "    temp_diff = temperatures_differences(temps) \n",
+    "    # print(temp_diff)\n",
+    "    \n",
+    "    temps_diff_rearranged = rearrange(temp_diff, '(w1 w2) -> w1 w2', w2 = 7)\n",
+    "    # print(temps_diff_rearranged)\n",
+    "\n",
+    "    temps_std = reduce(temps_diff_rearranged, 'h w -> h', t.std)\n",
+    "    # print(temps_std)\n",
+    "    \n",
+    "    temps_std_rearranged = rearrange(temps_std, 'w -> w 1')\n",
+    "    # print(temps_std_rearranged)\n",
+    "    return rearrange(temps_diff_rearranged / temps_std_rearranged, 'h w -> (h w)')\n",
+    "\n",
     "expected = t.tensor(\n",
     "    [\n",
     "        -0.3326,\n",
