--- a/prereqs.ipynb
+++ b/prereqs.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -276,9 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def batched_dot_product_nd(a: t.Tensor, b: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Return the batched dot product of a and b, where the first dimension is the batch dimension.\n",
@@ -294,11 +303,14 @@
     "    Use torch.einsum. You can use the ellipsis \"...\" in the einsum formula to represent an arbitrary number of dimensions.\n",
     "    \"\"\"\n",
     "    assert a.shape == b.shape\n",
-    "    pass\n",
+    "    return(t.einsum('i...,i... ->i',[a,b]))\n",
     "\n",
-    "\n",
-    "actual = batched_dot_product_nd(t.tensor([[1, 1, 0], [0, 0, 1]]), t.tensor([[1, 1, 0], [1, 1, 0]]))\n",
-    "expected = t.tensor([2, 0])\n",
+    "actual = batched_dot_product_nd(t.tensor([[1, 1, 0], \n",
+    "                                          [0, 0, 1]]), \n",
+    "                                t.tensor([[1, 1, 0], \n",
+    "                                          [1, 1, 0]]))\n",
+    "expected = t.tensor([2, \n",
+    "                     0])\n",
     "assert_all_equal(actual, expected)\n",
     "actual2 = batched_dot_product_nd(t.arange(12).reshape((3, 2, 2)), t.arange(12).reshape((3, 2, 2)))\n",
     "expected2 = t.tensor([14, 126, 366])\n",
@@ -307,9 +319,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 293,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def identity_matrix(n: int) -> t.Tensor:\n",
     "    \"\"\"Return the identity matrix of size nxn.\n",
@@ -320,18 +341,33 @@
     "    Bonus: find a different way to do it.\n",
     "    \"\"\"\n",
     "    assert n >= 0\n",
-    "    pass\n",
     "\n",
+    "    if n==0:\n",
+    "       return t.zeros((0, 0))\n",
+    "    x = t.arange(0,n*n)\n",
+    "    y = rearrange(x, '(i b) -> i b', b=n)\n",
+    "    z = y % (n + 1)\n",
+    "    return ((z == 0) * 1)\n",
     "\n",
-    "assert_all_equal(identity_matrix(3), t.Tensor([[1, 0, 0], [0, 1, 0], [0, 0, 1]]))\n",
+    "assert_all_equal(identity_matrix(3), t.Tensor([[1, 0, 0], \n",
+    "                                               [0, 1, 0], \n",
+    "                                               [0, 0, 1]]))\n",
     "assert_all_equal(identity_matrix(0), t.zeros((0, 0)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 403,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def sample_distribution(probs: t.Tensor, n: int) -> t.Tensor:\n",
     "    \"\"\"Return n random samples from probs, where probs is a normalized probability distribution.\n",
@@ -347,18 +383,25 @@
     "    \"\"\"\n",
     "    assert abs(probs.sum() - 1.0) < 0.001\n",
     "    assert (probs >= 0).all()\n",
-    "    pass\n",
     "\n",
+    "    rn = repeat(t.rand(n), 'i -> i repeat', repeat=len(probs))\n",
+    "    m = repeat(t.cumsum(probs, dim=0), 'i -> repeat i', repeat=n)\n",
+    "\n",
+    "    arr = reduce((rn > m) * 1, 'n probs -> n', 'sum')\n",
+    "\n",
+    "    return arr\n",
     "\n",
     "n = 10000000\n",
     "probs = t.tensor([0.05, 0.1, 0.1, 0.2, 0.15, 0.4])\n",
+    "\n",
     "freqs = t.bincount(sample_distribution(probs, n)) / n\n",
+    "\n",
     "assert_all_close(freqs, probs, rtol=0.001, atol=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,8 +414,10 @@
     "    Use torch.argmax.\n",
     "    \"\"\"\n",
     "    assert true_classes.max() < scores.shape[1]\n",
-    "    pass\n",
     "\n",
+    "    am = t.argmax(scores, dim=1)\n",
+    "    pct = ((am == true_classes) * 1).sum() / len(true_classes)\n",
+    "    return(pct)\n",
     "\n",
     "scores = t.tensor([[0.75, 0.5, 0.25], [0.1, 0.5, 0.4], [0.1, 0.7, 0.2]])\n",
     "true_classes = t.tensor([0, 1, 0])\n",
@@ -382,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,9 +441,8 @@
     "\n",
     "    https://numpy.org/doc/stable/user/basics.indexing.html#integer-array-indexing\n",
     "    \"\"\"\n",
-    "    assert items.max() < prices.shape[0]\n",
-    "    pass\n",
-    "\n",
+    "    assert items.max() < prices.shape[0] \n",
+    "    return prices[(items)].sum()\n",
     "\n",
     "prices = t.tensor([0.5, 1, 1.5, 2, 2.5])\n",
     "items = t.tensor([0, 0, 1, 1, 4, 3, 2])\n",
@@ -407,9 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 443,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def gather_2d(matrix: t.Tensor, indexes: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Perform a gather operation along the second dimension.\n",
@@ -423,9 +476,12 @@
     "\n",
     "    See: https://pytorch.org/docs/stable/generated/torch.gather.html?highlight=gather#torch.gather\n",
     "    \"\"\"\n",
-    "    \"TODO: YOUR CODE HERE\"\n",
+    "\n",
+    "    assert matrix.shape[0] == indexes.shape[0] # equivalent to len(indexes) == len(matrix)\n",
+    "    assert len(matrix.shape) == len(indexes.shape)\n",
+    "    assert matrix.shape[1] >= indexes.shape[1]\n",
     "    out = matrix.gather(1, indexes)\n",
-    "    \"TODO: YOUR CODE HERE\"\n",
+    "    assert indexes.shape == out.shape\n",
     "    return out\n",
     "\n",
     "\n",
@@ -435,20 +491,20 @@
     "assert_all_equal(gather_2d(matrix, indexes), expected)\n",
     "indexes2 = t.tensor([[2, 4], [1, 3], [0, 2]])\n",
     "expected2 = t.tensor([[2, 4], [6, 8], [10, 12]])\n",
-    "assert_all_equal(gather_2d(matrix, indexes), expected)"
+    "assert_all_equal(gather_2d(matrix, indexes2), expected2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
     "def total_price_gather(prices: t.Tensor, items: t.Tensor) -> float:\n",
     "    \"\"\"Compute the same as total_price_indexing, but use torch.gather.\"\"\"\n",
     "    assert items.max() < prices.shape[0]\n",
-    "    pass\n",
-    "\n",
+    "    \n",
+    "    return prices.gather(0, items).sum()\n",
     "\n",
     "prices = t.tensor([0.5, 1, 1.5, 2, 2.5])\n",
     "items = t.tensor([0, 0, 1, 1, 4, 3, 2])\n",
@@ -457,9 +513,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 629,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def integer_array_indexing(matrix: t.Tensor, coords: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Return the values at each coordinate using integer array indexing.\n",
@@ -472,15 +537,24 @@
     "\n",
     "    Return: (batch, )\n",
     "    \"\"\"\n",
-    "    pass\n",
     "\n",
+    "    rearranged_coords = rearrange(coords, 'i j -> j i')\n",
+    "    return matrix[np.array(rearranged_coords)]\n",
     "\n",
     "mat_2d = t.arange(15).view(3, 5)\n",
-    "coords_2d = t.tensor([[0, 1], [0, 4], [1, 4]])\n",
+    "\n",
+    "coords_2d = t.tensor([[0, 1], \n",
+    "                      [0, 4], \n",
+    "                      [1, 4]])\n",
     "actual = integer_array_indexing(mat_2d, coords_2d)\n",
     "assert_all_equal(actual, t.tensor([1, 4, 9]))\n",
+    "\n",
     "mat_3d = t.arange(2 * 3 * 4).view((2, 3, 4))\n",
-    "coords_3d = t.tensor([[0, 0, 0], [0, 1, 1], [0, 2, 2], [1, 0, 3], [1, 2, 0]])\n",
+    "coords_3d = t.tensor([[0, 0, 0], \n",
+    "                      [0, 1, 1], \n",
+    "                      [0, 2, 2], \n",
+    "                      [1, 0, 3], \n",
+    "                      [1, 2, 0]])\n",
     "actual = integer_array_indexing(mat_3d, coords_3d)\n",
     "assert_all_equal(actual, t.tensor([0, 5, 10, 15, 20]))\n",
     "\n",
@@ -580,9 +654,7 @@
     "matrix2 = t.arange(start + 1, start + 6).view((1, 5)).float()\n",
     "actual = batched_logsoftmax(matrix2)\n",
     "expected = t.tensor([[-4.4519, -3.4519, -2.4519, -1.4519, -0.4519]])\n",
-    "assert_all_close(actual, expected)\n",
-    "\n",
-    "\n"
+    "assert_all_close(actual, expected)\n"
    ]
   },
   {
@@ -609,9 +681,7 @@
     "true_labels = t.tensor([2, 0, 0])\n",
     "expected = t.tensor([0.0, math.log(3), float(\"inf\")])\n",
     "actual = batched_cross_entropy_loss(logits, true_labels)\n",
-    "assert_all_close(actual, expected)\n",
-    "\n",
-    "\n"
+    "assert_all_close(actual, expected)"
    ]
   },
   {
@@ -636,9 +706,7 @@
     "row_indexes = t.tensor([0, 2, 1, 0])\n",
     "actual = collect_rows(matrix, row_indexes)\n",
     "expected = t.tensor([[0, 1, 2], [6, 7, 8], [3, 4, 5], [0, 1, 2]])\n",
-    "assert_all_equal(actual, expected)\n",
-    "\n",
-    "\n"
+    "assert_all_equal(actual, expected)"
    ]
   },
   {
@@ -663,8 +731,7 @@
     "column_indexes = t.tensor([0, 2, 1, 0])\n",
     "actual = collect_columns(matrix, column_indexes)\n",
     "expected = t.tensor([[0, 2, 1, 0], [3, 5, 4, 3], [6, 8, 7, 6], [9, 11, 10, 9], [12, 14, 13, 12]])\n",
-    "assert_all_equal(actual, expected)\n",
-    "\n"
+    "assert_all_equal(actual, expected)"
    ]
   },
   {
