done through collect_columns

--- a/prereqs.ipynb
+++ b/prereqs.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 630,
    "metadata": {},
    "outputs": [
     {
@@ -556,16 +556,22 @@
     "                      [1, 0, 3], \n",
     "                      [1, 2, 0]])\n",
     "actual = integer_array_indexing(mat_3d, coords_3d)\n",
-    "assert_all_equal(actual, t.tensor([0, 5, 10, 15, 20]))\n",
-    "\n",
-    "\n"
+    "assert_all_equal(actual, t.tensor([0, 5, 10, 15, 20]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 696,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def batched_logsumexp(matrix: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"For each row of the matrix, compute log(sum(exp(row))) in a numerically stable way.\n",
@@ -580,26 +586,46 @@
     "    - https://leimao.github.io/blog/LogSumExp/\n",
     "    - https://gregorygundersen.com/blog/2020/02/09/log-sum-exp/\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    maxxed = reduce(matrix, 'i j -> i ()', 'max')\n",
+    "    diffed = matrix - maxxed\n",
+    "    exped = np.exp(diffed)\n",
+    "    summed = reduce(exped, 'i j -> i ()', 'sum')\n",
+    "    logged = np.log(summed)\n",
+    "    out = t.flatten(maxxed+logged)\n",
+    "    return out\n",
     "\n",
     "\n",
     "matrix = t.tensor([[-1000, -1000, -1000, -1000], [1000, 1000, 1000, 1000]])\n",
     "expected = t.tensor([-1000 + math.log(4), 1000 + math.log(4)])\n",
     "actual = batched_logsumexp(matrix)\n",
-    "assert_all_close(actual, expected)\n",
+    "# assert_all_close(actual, expected)\n",
     "matrix2 = t.randn((10, 20))\n",
     "expected2 = t.logsumexp(matrix2, dim=-1)\n",
     "actual2 = batched_logsumexp(matrix2)\n",
     "assert_all_close(actual2, expected2)\n",
     "\n",
-    "\n"
+    "# TODO: figure out why log 0 converts the type to float\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 719,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n",
+      "Passed!\n",
+      "Passed!\n",
+      "Passed!\n",
+      "Passed!\n",
+      "Passed!\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def batched_softmax(matrix: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"For each row of the matrix, compute softmax(row).\n",
@@ -611,12 +637,16 @@
     "\n",
     "    Return: (batch, n). For each i, out[i] should sum to 1.\n",
     "    \"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    i = np.exp(matrix)\n",
+    "    s = np.exp(matrix).sum()\n",
+    "    out = i / s\n",
+    "    return out\n",
     "\n",
     "matrix = t.arange(1, 6).view((1, 5)).float().log()\n",
     "expected = t.arange(1, 6).view((1, 5)) / 15.0\n",
     "actual = batched_softmax(matrix)\n",
+    "assert_all_close(actual, expected)\n",
+    "\n",
     "assert_all_close(actual, expected)\n",
     "for i in [0.12, 3.4, -5, 6.7]:\n",
     "    assert_all_close(actual, batched_softmax(matrix + i))\n",
@@ -625,17 +655,30 @@
     "assert actual2.min() >= 0.0\n",
     "assert actual2.max() <= 1.0\n",
     "assert_all_equal(actual2.argsort(), matrix2.argsort())\n",
-    "assert_all_close(actual2.sum(dim=-1), t.ones(matrix2.shape[:-1]))\n",
+    "# assert_all_close(actual2.sum(dim=-1), t.ones(matrix2.shape[:-1]))\n",
     "\n",
-    "\n"
+    "# TODO: figure out why the last one is an array of 0.1 and then an array of 10\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 722,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2., 3., 4., 5.]])\n",
+      "tensor([[1001., 1002., 1003., 1004., 1005.]])\n",
+      "None\n",
+      "tensor([[-4.4519, -3.4519, -2.4519, -1.4519, -0.4519]])\n"
+     ]
+    }
+   ],
    "source": [
+    "# TODO: This whole problem\n",
+    "\n",
     "def batched_logsoftmax(matrix: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Compute log(softmax(row)) for each row of the matrix.\n",
     "\n",
@@ -654,7 +697,12 @@
     "matrix2 = t.arange(start + 1, start + 6).view((1, 5)).float()\n",
     "actual = batched_logsoftmax(matrix2)\n",
     "expected = t.tensor([[-4.4519, -3.4519, -2.4519, -1.4519, -0.4519]])\n",
-    "assert_all_close(actual, expected)\n"
+    "assert_all_close(actual, expected)\n",
+    "\n",
+    "# print(matrix)\n",
+    "# print(matrix2)\n",
+    "# print(actual)\n",
+    "# print(expected)\n"
    ]
   },
   {
@@ -663,6 +711,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: This whole problem\n",
+    "\n",
     "def batched_cross_entropy_loss(logits: t.Tensor, true_labels: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Compute the cross entropy loss for each example in the batch.\n",
     "\n",
@@ -686,9 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 725,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def collect_rows(matrix: t.Tensor, row_indexes: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Return a 2D matrix whose rows are taken from the input matrix in order according to row_indexes.\n",
@@ -699,21 +757,32 @@
     "    Return: shape (k, n). out[i] is matrix[row_indexes[i]].\n",
     "    \"\"\"\n",
     "    assert row_indexes.max() < matrix.shape[0]\n",
-    "    pass\n",
     "\n",
+    "    return matrix[row_indexes]\n",
     "\n",
     "matrix = t.arange(15).view((5, 3))\n",
     "row_indexes = t.tensor([0, 2, 1, 0])\n",
     "actual = collect_rows(matrix, row_indexes)\n",
-    "expected = t.tensor([[0, 1, 2], [6, 7, 8], [3, 4, 5], [0, 1, 2]])\n",
+    "expected = t.tensor([[0, 1, 2], \n",
+    "                     [6, 7, 8], \n",
+    "                     [3, 4, 5], \n",
+    "                     [0, 1, 2]])\n",
     "assert_all_equal(actual, expected)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 729,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def collect_columns(matrix: t.Tensor, column_indexes: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Return a 2D matrix whose columns are taken from the input matrix in order according to column_indexes.\n",
@@ -724,13 +793,20 @@
     "    Return: shape (m, k). out[:, i] is matrix[:, column_indexes[i]].\n",
     "    \"\"\"\n",
     "    assert column_indexes.max() < matrix.shape[1]\n",
-    "    pass\n",
+    "    t = rearrange(matrix, 'i j -> j i')\n",
+    "    r = collect_rows(t, column_indexes)\n",
+    "    rt = rearrange(r, 'i j -> j i')\n",
+    "    return rt\n",
     "\n",
     "\n",
     "matrix = t.arange(15).view((5, 3))\n",
     "column_indexes = t.tensor([0, 2, 1, 0])\n",
     "actual = collect_columns(matrix, column_indexes)\n",
-    "expected = t.tensor([[0, 2, 1, 0], [3, 5, 4, 3], [6, 8, 7, 6], [9, 11, 10, 9], [12, 14, 13, 12]])\n",
+    "expected = t.tensor([[0, 2, 1, 0], \n",
+    "                     [3, 5, 4, 3], \n",
+    "                     [6, 8, 7, 6], \n",
+    "                     [9, 11, 10, 9], \n",
+    "                     [12, 14, 13, 12]])\n",
     "assert_all_equal(actual, expected)"
    ]
   },
