--- a/prereqs.ipynb
+++ b/prereqs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1010,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1011,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1012,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1013,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1014,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1015,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1016,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1017,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 1018,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1019,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 1020,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 1021,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 1022,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 1023,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 1024,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 1025,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 1026,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 1027,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 719,
+   "execution_count": 1028,
    "metadata": {},
    "outputs": [
     {
@@ -662,20 +662,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 1079,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[1., 2., 3., 4., 5.]])\n",
-      "tensor([[1001., 1002., 1003., 1004., 1005.]])\n",
-      "None\n",
-      "tensor([[-4.4519, -3.4519, -2.4519, -1.4519, -0.4519]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: This whole problem\n",
     "\n",
@@ -736,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -826,27 +815,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1046,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 0 passed!\n",
+      "Test 1 passed!\n",
+      "Test 2 passed!\n",
+      "Test 3 passed!\n",
+      "Test 4 passed!\n",
+      "Test 5 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import namedtuple\n",
     "\n",
     "TestCase = namedtuple(\"TestCase\", [\"output\", \"size\", \"stride\"])\n",
-    "test_input_a = t.tensor([[0, 1, 2, 3, 4], [5, 6, 7, 8, 9], [10, 11, 12, 13, 14], [15, 16, 17, 18, 19]])\n",
+    "test_input_a = t.tensor([[0, 1, 2, 3, 4], \n",
+    "                         [5, 6, 7, 8, 9], \n",
+    "                         [10, 11, 12, 13, 14], \n",
+    "                         [15, 16, 17, 18, 19]])\n",
     "test_cases = [\n",
-    "    TestCase(output=t.tensor([0, 1, 2, 3]), size=(1,), stride=(1,)),\n",
-    "    TestCase(output=t.tensor([[0, 1, 2], [5, 6, 7]]), size=(1,), stride=(1,)),\n",
-    "    TestCase(output=t.tensor([[0, 0, 0], [11, 11, 11]]), size=(1,), stride=(1,)),\n",
-    "    TestCase(output=t.tensor([0, 6, 12, 18]), size=(1,), stride=(1,)),\n",
-    "    TestCase(output=t.tensor([[[0, 1, 2]], [[9, 10, 11]]]), size=(1,), stride=(1,)),\n",
+    "    TestCase(output=t.tensor([0, 1, 2, 3]), size=(1,4), stride=(1,1)),\n",
+    "    TestCase(output=t.tensor([[0, 1, 2], [5, 6, 7]]), size=(2,3), stride=(5,1)),\n",
+    "    TestCase(output=t.tensor([[0, 0, 0], [11, 11, 11]]), size=(2,3), stride=(11,0)),\n",
+    "    TestCase(output=t.tensor([0, 6, 12, 18]), size=(1,4), stride=(1,6)),\n",
+    "    TestCase(output=t.tensor([[[0, 1, 2]], [[9, 10, 11]]]), size=(2,1,3), stride=(9,0,1)),\n",
     "    TestCase(\n",
     "        output=t.tensor([[[[0, 1], [2, 3]], [[4, 5], [6, 7]]], [[[12, 13], [14, 15]], [[16, 17], [18, 19]]]]),\n",
-    "        size=(1,),\n",
-    "        stride=(1,),\n",
+    "        size=(2,2,2,2),\n",
+    "        stride=(12,4,2,1),\n",
     "    ),\n",
     "]\n",
     "for (i, case) in enumerate(test_cases):\n",
+    "    # print(i)\n",
+    "    # print(case)\n",
     "    actual = test_input_a.as_strided(size=case.size, stride=case.stride)\n",
     "    if (case.output != actual).any():\n",
     "        print(f\"Test {i} failed:\")\n",
@@ -868,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1072,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,58 +889,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1073,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: relu_clone_setitem\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def relu_clone_setitem(x: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Make a copy with torch.clone and then assign to parts of the copy.\"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    y = t.clone(x)\n",
+    "    y_relu = t.tensor([i if i > 0 else 0 for i in y])\n",
+    "    return y_relu\n",
     "\n",
     "test_relu(relu_clone_setitem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1074,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: relu_where\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def relu_where(x: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Use torch.where.\"\"\"\n",
-    "    pass\n",
-    "\n",
-    "\n",
+    "    return (t.where(x > 0, x, 0))\n",
+    "    \n",
     "test_relu(relu_where)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1075,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: relu_maximum\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def relu_maximum(x: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Use torch.maximum.\"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    return t.maximum(x, t.tensor([0 for i in x]))\n",
     "\n",
     "test_relu(relu_maximum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1076,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: relu_abs\n",
+      "Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def relu_abs(x: t.Tensor) -> t.Tensor:\n",
     "    \"\"\"Use torch.abs.\"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    return (t.abs(x) + x) / 2\n",
     "\n",
     "test_relu(relu_abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1077,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: relu_multiply_bool\n",
+      "Passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def relu_multiply_bool(x: t.Tensor) -> t.Tensor:\n",
+    "    \"\"\"Create a boolean tensor and multiply the input by it elementwise.\"\"\"\n",
+    "    y = x >= 0\n",
+    "    return x * y\n",
+    "\n",
+    "test_relu(relu_multiply_bool)"
    ]
   },
   {
@@ -941,14 +1005,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def relu_multiply_bool(x: t.Tensor) -> t.Tensor:\n",
-    "    \"\"\"Create a boolean tensor and multiply the input by it elementwise.\"\"\"\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "test_relu(relu_multiply_bool)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
